[tool.poetry]
name = "python-notes"
version = "0.1.0"
description = "A package containing notes regarding aspects of python, including executable code."
authors = ["OctaneOolong <62565951+OctaneOolong@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "python_notes"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
